cmake_minimum_required(VERSION 2.8)
project(MPP)

if(CMAKE_VERSION VERSION_LESS "3.0")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -O3 -march=native -ffast-math")
else()
    set(CMAKE_CXX_STANDARD 20)
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -ffast-math")
    if(NOT CMAKE_BUILD_TYPE)
        set(CMAKE_BUILD_TYPE Release)
    endif()
endif()

include_directories(src)

add_executable(generator src/d1/Generator.cpp)
add_executable(sequential src/d1/Sequential.cpp)

add_executable(pthreads src/d2/PThreads.cpp)
target_link_libraries(pthreads pthread)

if(CMAKE_VERSION VERSION_LESS "3.0")
    add_executable(openmp src/d2/OpenMP.cpp)
    set_target_properties(openmp PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
else()
    add_executable(openmp src/d2/OpenMP.cpp)
    target_compile_options(openmp PRIVATE -fopenmp)
    target_link_libraries(openmp gomp)
endif()
